--- a/.github/workflows/dev-track-test.yml
+++ b/.github/workflows/dev-track-test.yml
@@ -24,6 +24,14 @@ on:
   pull_request:
     types: [opened, reopened, edited, synchronize]
   workflow_dispatch:
+    inputs:
+      del:
+        description: Do you want delete dev track?
+        required: true
+        type: string
+    branches:    
+      - '!main'
+      - '!master'
 
 jobs:
   GetTrackSlugs:
@@ -81,3 +89,29 @@ jobs:
         with:
           path: ${{ env.TRACK_DIR }}/${{ matrix.tracks.slug }}
         if: steps.track-pull.outcome == 'success'
+        
+  DeleteDevTracks:
+     runs-on: ubuntu-latest  
+     if: ${{ inputs.del }} == 'true'
+     steps:
+     
+      - name: Check out repository code
+        uses: actions/checkout@v3
+
+      - name: Update file permissions
+        run: sudo chmod -R a+rwx ${{ env.TRACK_DIR }}/${{ inputs.slug }}-dev
+
+      - name: Delete dev track
+        uses: ./.github/actions/track-delete
+        with:
+          path: ${{ env.TRACK_DIR }}/${{ inputs.slug }}-dev
+      
+      - name: Delete dev dir
+        uses: JesseTG/rm@v1.0.3
+        with:
+          path: ${{ env.TRACK_DIR }}/${{ inputs.slug }}-dev
+          
+      - name: Commit Changes
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Deleting the dev version of ${{ inputs.slug }}-dev
