--- a/.github/workflows/dev-track-test.yml
+++ b/.github/workflows/dev-track-test.yml
@@ -99,19 +99,19 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Update file permissions
-        run: sudo chmod -R a+rwx ${{ env.TRACK_DIR }}/${{ inputs.slug }}-dev
+        run: sudo chmod -R a+rwx ${{ env.TRACK_DIR }}/${{ matrix.tracks.slug }}-dev
 
       - name: Delete dev track
         uses: ./.github/actions/track-delete
         with:
-          path: ${{ env.TRACK_DIR }}/${{ inputs.slug }}-dev
+          path: ${{ env.TRACK_DIR }}/${{ matrix.tracks.slug }}-dev
       
       - name: Delete dev dir
         uses: JesseTG/rm@v1.0.3
         with:
-          path: ${{ env.TRACK_DIR }}/${{ inputs.slug }}-dev
+          path: ${{ env.TRACK_DIR }}/${{ matrix.tracks.slug }}-dev
           
       - name: Commit Changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: Deleting the dev version of ${{ inputs.slug }}-dev
+          commit_message: Deleting the dev version of ${{ matrix.tracks.slug }}-dev
