--- a/.github/workflows/dev-track-test.yml
+++ b/.github/workflows/dev-track-test.yml
@@ -93,6 +93,8 @@ jobs:
   DeleteDevTracks:
      runs-on: ubuntu-latest  
      if: ${{ inputs.del }} == 'true'
+     strategy:
+      matrix: ${{ fromJson(needs.GetTrackSlugs.outputs.matrix) }}
      steps:
      
       - name: Check out repository code
