--- a/.github/workflows/dev-track-test.yml
+++ b/.github/workflows/dev-track-test.yml
@@ -27,7 +27,7 @@ on:
     inputs:
       del:
         description: Do you want delete dev track?
-        required: true
+        required: false
         type: string
     branches:    
       - '!main'
