--- a/.github/workflows/dev-track-test.yml
+++ b/.github/workflows/dev-track-test.yml
@@ -94,33 +94,34 @@ jobs:
   DeleteDevTracks:
      runs-on: ubuntu-latest
      if: ${{ inputs.del == 'true' }}
-     needs: GetTrackSlugs
+     needs: [GetTrackSlugs, TestDevTracks]
      strategy:
        matrix: ${{ fromJson(needs.GetTrackSlugs.outputs.matrix) }}
        
      steps:
       - name: Check out repository code
         uses: actions/checkout@v3
-        if: TestDevTracks.steps.track-test.outcome == 'success'
+        if: needs.TestDevTracks.steps.track-test.outcome == 'success'
 
       - name: Update file permissions
         run: sudo chmod -R a+rwx ${{ env.TRACK_DIR }}/${{ matrix.tracks.slug }}-dev
-        if: TestDevTracks.steps.track-test.outcome == 'success'
+        if: needs.TestDevTracks.steps.track-test.outcome == 'success'
 
       - name: Delete dev track
         uses: ./.github/actions/track-delete
         with:
           path: ${{ env.TRACK_DIR }}/${{ matrix.tracks.slug }}-dev
-        if: TestDevTracks.steps.track-test.outcome == 'success'
+        if: needs.TestDevTracks.steps.track-test.outcome == 'success'
         
       - name: Delete dev dir
         uses: JesseTG/rm@v1.0.3
         with:
           path: ${{ env.TRACK_DIR }}/${{ matrix.tracks.slug }}-dev
-        if: TestDevTracks.steps.track-test.outcome == 'success'
+        if: needs.TestDevTracks.steps.track-test.outcome == 'success'
           
       - name: Commit Changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Deleting the dev version of ${{ matrix.tracks.slug }}-dev  
+        if: needs.TestDevTracks.steps.track-test.outcome == 'success'
         
