--- a/.github/workflows/dev-track-test.yml
+++ b/.github/workflows/dev-track-test.yml
@@ -88,7 +88,7 @@ jobs:
         id: track-test
         uses: ./.github/actions/track-test
         with:
-          path: ${{ env.TRACK_DIR }}/${{ matrix.tracks.slug }}
+          path: ${{ env.TRACK_DIR }}/${{ matrix.tracks.slug1 }}
         if: steps.track-pull.outcome == 'success'
         
   DeleteDevTracks:
