--- a/.github/workflows/dev-track-del.yml
+++ b/.github/workflows/dev-track-del.yml
@@ -15,6 +15,8 @@ concurrency:
   cancel-in-progress: true
 
 on: 
+  pull_request:
+    types: closed
   workflow_dispatch:
     inputs:
       slug:
