--- a/.github/workflows/dev-track-test.yml
+++ b/.github/workflows/dev-track-test.yml
@@ -15,8 +15,7 @@ env:
   # have a track-slugs.yml file in your tracks directory.
   TRACK_DIR: instruqt-tracks
   INSTRUQT_TOKEN: ${{ secrets.INSTRUQT_TOKEN }}
-  Y: true
-  DELETE_DEV_TRACK: ${{ Y }}
+  DELETE_DEV_TRACK: y
   
 
 concurrency:
@@ -88,7 +87,7 @@ jobs:
         
   DeleteDevTracks:
      runs-on: ubuntu-latest
-     if: ${{ env.DELETE_DEV_TRACK }}
+     if: ${{ env.DELETE_DEV_TRACK == 'y'}}
      needs: [GetTrackSlugs, TestDevTracks]
      strategy:
        matrix: ${{ fromJson(needs.GetTrackSlugs.outputs.matrix) }}
