--- a/.github/workflows/dev-track-test.yml
+++ b/.github/workflows/dev-track-test.yml
@@ -15,7 +15,6 @@ env:
   # have a track-slugs.yml file in your tracks directory.
   TRACK_DIR: instruqt-tracks
   INSTRUQT_TOKEN: ${{ secrets.INSTRUQT_TOKEN }}
-  DELETE_DEV: TRUE 
 
 concurrency:
   group: ${{ github.head_ref || github.run_id }}
@@ -86,6 +85,8 @@ jobs:
         
   DeleteDevTracks:
      runs-on: ubuntu-latest
+     env:
+       DELETE_DEV: TRUE 
      if: ${{ env.DELETE_DEV == 'TRUE' }}
      needs: [GetTrackSlugs, TestDevTracks]
      strategy:
