--- a/.github/workflows/dev-track-test.yml
+++ b/.github/workflows/dev-track-test.yml
@@ -95,6 +95,7 @@ jobs:
         uses: actions/checkout@v3
         
       - name: Update file permissions
+        if: env.DELETE_DEV == 'true'
         run: sudo chmod -R a+rwx ${{ env.TRACK_DIR }}/${{ matrix.tracks.slug }}-dev
 
       - name: Delete dev track
