--- a/.github/workflows/prod-track-test.yml
+++ b/.github/workflows/prod-track-test.yml
@@ -99,4 +99,8 @@ jobs:
         uses: JesseTG/rm@v1.0.3
         with:
           path: ${{ env.TRACK_DIR }}/${{ matrix.tracks.slug }}-dev
-        
+          
+      - name: Commit Changes
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Deleting the main dev version of ${{ matrix.tracks.slug }}-dev       
