--- a/.github/workflows/prod-track-test.yml
+++ b/.github/workflows/prod-track-test.yml
@@ -103,4 +103,4 @@ jobs:
       - name: Commit Changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: Deleting the main dev version
+          commit_message: Deleting the dev version
