--- a/.github/workflows/prod-track-test.yml
+++ b/.github/workflows/prod-track-test.yml
@@ -95,6 +95,13 @@ jobs:
           path: ${{ env.TRACK_DIR }}/${{ matrix.tracks.slug }}
         if: steps.check-ci.outcome == 'success'
         
+  DeleteDevTracks:
+     runs-on: ubuntu-latest
+     needs: GetTrackSlugs
+     strategy:
+       matrix: ${{ fromJson(needs.GetTrackSlugs.outputs.matrix) }}
+     steps:
+        
       - name: Delete dev dir
         uses: JesseTG/rm@v1.0.3
         with:
