--- a/.github/workflows/prod-track-test.yml
+++ b/.github/workflows/prod-track-test.yml
@@ -97,7 +97,7 @@ jobs:
         
   DeleteDevTracks:
      runs-on: ubuntu-latest
-     needs: GetTrackSlugs
+     needs: [GetTrackSlugs, TestProdTracks]
      strategy:
        matrix: ${{ fromJson(needs.GetTrackSlugs.outputs.matrix) }}
      steps:
